# kolibri

./: .gitignore  HANDOFF.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json
app/: App.tsx  KOLIBRI.md  README.md  app.json  index.js  jest.config.js  jest.setup.js  package.json
app/__mocks__/: fileMock.js
app/__tests__/: App.test.tsx
app/android/: settings.gradle
app/android/app/: build.gradle
app/ios/: Podfile
app/ios/KolibriApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
app/ios/KolibriApp.xcodeproj/: project.pbxproj
app/src/: api.d.ts  config.ts
app/src/api/: batches.ts  client.ts  compliance.ts  events.ts  mappers.ts  siws.ts  storage.ts  tx.ts  upload.ts
app/src/components/: BatchListItem.tsx  ConnectWalletButton.tsx  DocumentItem.tsx  ExpansionPanel.tsx  KolibriLogo.tsx  LabDataCard.tsx  PrimaryButton.tsx  ProductPhoto.tsx  ProofOfExistenceCard.tsx  QRCodeCard.tsx  SecondaryButton.tsx  Section.tsx  TextField.tsx  (+2 more)
apps/api/: .env.example  package.json
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
docs/: MOBILE.md  PRD-v1.2-Section-7.4-DPO2U-MCP.md  event-schemas.md
docs/screenshots/: README.md
landing-page/: README.md  index.html  main.js  styles.css
programs/: Anchor.toml  tsconfig.json
programs/programs/kolibri-registry/: Cargo.toml
programs/programs/kolibri-registry/src/: lib.rs
programs/tests/: kolibri_registry.ts
scripts/: deploy-devnet.sh  landing-preview.mjs
(+60 files in other folders)
