[package]
name = "kolibri-registry"
version = "0.1.0"
description = "Kolibri — registro de rastreabilidade (PoE) + NFT das plantas na Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kolibri_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
